--- a/package.json
+++ b/package.json
@@ -1,17 +1,21 @@
 {
   "name": "birthdays",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "description": "App de cumpleaños con Node.js y Express",
+  "main": "app.js", 
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node app.js"
   },
   "keywords": [],
-  "author": "",
+  "author": "TuNombre",
   "license": "ISC",
   "type": "commonjs",
   "dependencies": {
     "ejs": "^3.1.10",
     "express": "^5.1.0"
+  },
+  "engines": {
+    "node": ">=18.x" 
   }
 }
